# ParaCL

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
include/: drawer.hpp  driver.hpp  error_handler.hpp  executer.hpp  lexer.hpp  location.hpp  node.hpp
src/: CMakeLists.txt  driver.cpp  lexer.l  parser.yy
tests/: 2.paracl  5.paracl  CMakeLists.txt  check_tests.py
tests/end-to-end/: CMakeLists.txt  check_tests.py  graph.dot
tests/end-to-end/right/: 10.paracl  11.ans  11.paracl  12.paracl  13.ans  13.paracl  14.paracl  15.paracl  16.paracl  17.paracl  18.paracl  19.paracl  20.ans  20.paracl  21.paracl  22.paracl  23.paracl  4.ans  4.paracl  7.paracl  8.paracl  9.paracl
tests/end-to-end/wrong/: 1.ans  1.paracl  10.ans  10.paracl  2.paracl  3.ans  3.paracl  4.ans  6.ans  6.paracl  7.ans  7.paracl  8.ans  8.paracl  9.ans  9.paracl
tests/right/: 3.paracl  5.paracl  6.paracl
tests/unit/: CMakeLists.txt  tests.cpp
tests/wrong/: 1.ans  2.ans  3.ans  4.ans  4.paracl  5.ans  5.paracl
